--- a/proj/frontend/staticFiles/htdocs/index.html
+++ b/proj/frontend/staticFiles/htdocs/index.html
@@ -4,8 +4,8 @@
 <html>
 <head>
     <title>Index</title>
-    <link rel="stylesheet" href="../style_common.css"/>
-    
+    <link rel="stylesheet" href="../style_common.css"/>	
+    <script defer src="../mainCommon.js"></script> 
 </head>
 <body>
 
@@ -16,6 +16,7 @@
         <a href="signup.html">Sign up</a>
 
     </div>
+
 
 </body>
 </html>
