Added file listing endpoint

--- a/proj/frontend/staticFiles/htdocs/login.html
+++ b/proj/frontend/staticFiles/htdocs/login.html
@@ -4,6 +4,7 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" href="../style_common.css" />
+    <script src="../global.js"></script>
     <script defer src="../mainCommon.js"></script>
 </head>
 <body>
